--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
         <section class="featured-article">
             <h2>Featured Article</h2>
             <p>"Dispelling Myths: The Truth About Bananas and Radiation Exposure"</p>
+            <p>This news article addresses a common misconception regarding the supposed dangers of consuming bananas due to their small potassium-40 content, a naturally occurring radioactive isotope. Contrary to popular belief, the article emphasizes that the radiation levels in bananas are extremely low and do not pose an immediate threat to human health. Experts interviewed in the article explain that the radiation emitted by bananas is negligible and would require an impractical quantity to reach harmful levels. The piece explores the concept of radiation dosage and features insights from nutritionists and radiology experts to provide a scientifically grounded perspective on the risks associated with banana consumption. Ultimately, the article aims to dispel unfounded fears, promote a more informed understanding of banana radiation, and advocate for a balanced and rational approach to assessing potential health risks related to radiation exposure.</p>
         </section>
         <section class="latest-news">
             <h2>Latest News</h2>
             <p>"Sunshine State Showdown: Florida Man Takes on Outback Invader in Unlikely Kangaroo Wrestling Match"</p>
+            <p>In an unusual and improbable incident in Florida, a man found himself engaged in a bizarre encounter with a kangaroo. Reports suggest that the Florida man, known for unpredictable and peculiar incidents associated with the "Florida Man" phenomenon, somehow got into a physical altercation with a kangaroo. The details surrounding the incident remain unclear, leaving many questions unanswered about how and why the confrontation occurred.
+
+                Witnesses were left astonished as the Floridian and the kangaroo seemingly clashed, creating a surreal scene that defies typical expectations. Authorities are investigating the incident, attempting to piece together the circumstances that led to this unexpected confrontation. While the idea of a Florida man battling a kangaroo raises eyebrows and elicits curiosity, the motive and outcome of this peculiar event remain a subject of speculation and intrigue.</p>
         </section>
     </main>
 
